[project]
name = "geqie-qml"
version = "0.1.0"
description = "GEQIE QML extension"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["./requirements/requirements.txt"]}
optional-dependencies = {}

[tool.setuptools.packages.find]
where = ["src"]
