[project]
name = "geqie"
version = "1.0"
description = "General Equation of Quantum Image Encoding Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["./requirements/requirements.txt"]}
optional-dependencies.dev = {file = ["./requirements/requirements_dev_extras.in"]}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
geqie = "geqie.cli:cli"
